[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/bosses/sprite_notetaker1.png" type="Texture" id=1]
[ext_resource path="res://enemies/bosses/NoteTaker.gd" type="Script" id=2]
[ext_resource path="res://physics/HitEffect.tscn" type="PackedScene" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 2.99999
height = 320.0

[node name="NoteTaker" type="Area2D" groups=["enemies"]]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -65 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="Gun1" type="Position2D" parent="."]
position = Vector2( -123, -65 )

[node name="Gun2" type="Position2D" parent="."]
position = Vector2( -35, -65 )

[node name="Gun3" type="Position2D" parent="."]
position = Vector2( 37, -65 )

[node name="Gun4" type="Position2D" parent="."]
position = Vector2( 124, -65 )

[node name="HitEffect1" parent="." instance=ExtResource( 3 )]
position = Vector2( -123, -65 )

[node name="HitEffect2" parent="." instance=ExtResource( 3 )]
position = Vector2( -35, -65 )

[node name="HitEffect3" parent="." instance=ExtResource( 3 )]
position = Vector2( 37, -65 )

[node name="HitEffect4" parent="." instance=ExtResource( 3 )]
position = Vector2( 124, -65 )
